--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ replay_pid*
 /Tema2/Ejercicios/ejercicio4Media/build/
 /Tema2/Ejercicios/ejercicio15Tiempo/nbproject/private/
 /Tema2/Ejercicios/ejercicio15Tiempo/build/
+/Tema2/Ejercicios/ejercicio16/nbproject/private/
