--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ replay_pid*
 /Tema2/Ejercicios/ejercicio15Tiempo/nbproject/private/
 /Tema2/Ejercicios/ejercicio15Tiempo/build/
 /Tema2/Ejercicios/ejercicio16/nbproject/private/
+/Tema2/Ejercicios/ejercicio25/nbproject/private/
+/Tema2/Ejercicios/ejercicio25/build/
