--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ replay_pid*
 /Tema2/Ejercicios/ejercicio16/nbproject/private/
 /Tema2/Ejercicios/ejercicio25/nbproject/private/
 /Tema2/Ejercicios/ejercicio25/build/
+/Tema3/ejercicio8/nbproject/private/
+/Tema3/ejercicio8/build/
