ok ejercicio 9 completo

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ replay_pid*
 /Tema2/Ejercicios/ejercicio25/build/
 /Tema3/ejercicio8/nbproject/private/
 /Tema3/ejercicio8/build/
+/Tema3/ejercicio9/nbproject/private/
+/Tema3/ejercicio9/build/
