--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@ replay_pid*
 /Tema3/ejercicio14/build/
 /Tema3/ejercicio15/nbproject/private/
 /Tema3/ejercicio15/build/
+/Tema3/ejercicio16/nbproject/private/
+/Tema3/ejercicio16/build/
